chore:update env variable and fix overflow issues for auth pages

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -43,7 +43,8 @@
     display: block;
   }
   .showcase-nav {
-    background-color: #050144;
+    /* background-color: #050144;*/
+    background-color: #050114;
     color: #fff;
   }
 }
