--- a/src/css/login.css
+++ b/src/css/login.css
@@ -10,6 +10,7 @@
   top: 0;
   z-index: 2;
   background-color: #fff;
+  overflow-y: scroll;
 }
 .login-header h1 {
   font-size: 2.3em;
