--- a/src/css/registration.css
+++ b/src/css/registration.css
@@ -10,7 +10,7 @@
   min-height: 100vh;
 }
 .reg-heading {
-  background-color: #050144;
+  background-color: #050114;
   height: 50px;
   color: #fff;
   padding-left: 5px;
